# cernvm-control-panel

./: AUTHORS  CMakeLists.txt  COPYING  README
cmake/: icon.rc
cmake/.svn/: all-wcprops  entries
contribs/.svn/: all-wcprops  entries
contribs/ext/.svn/: all-wcprops  entries
nsis/.svn/: all-wcprops  entries
nsis/.svn/text-base/: CMakeLists.txt.svn-base  installer.nsi.svn-base
share/.svn/: all-wcprops  entries
share/.svn/text-base/: Info.plist.svn-base  cernvm-installer.desktop.svn-base  cernvm-installer.icns.svn-base  cernvm-installer.png.svn-base
src/: CMakeLists.txt  CVMIAboutPage.cpp  CVMIConfig.cpp  CVMIConfig.h  CVMIConfigPage.cpp  CVMIConfigPage.h  CVMIControlVBox.cpp  CVMICreatePage.h  CVMIData.h  CVMIDialog.cpp  CVMIDialog.h  CVMIMachines.cpp  CVMIMachines.h  CVMISelectPage.cpp  CVMISelectPage.h
src/.svn/: all-wcprops  entries
src/.svn/text-base/: CMakeLists.txt.svn-base  CVMIAboutPage.h.svn-base  CVMIControlVBox.h.svn-base  CVMIControlVM.h.svn-base  CVMICreatePage.cpp.svn-base  CVMIDialog.cpp.svn-base  CVMIDialog.h.svn-base  CVMIDialog.qrc.svn-base  CVMIInstallPage.cpp.svn-base  CVMIInstallPage.h.svn-base  CVMISelectPage.cpp.svn-base  CVMISelectPage.h.svn-base  main.cpp.svn-base
src/images/.svn/: all-wcprops  entries
src/images/.svn/text-base/: download_icon.png.svn-base
